fixing an error with posting a user
